Fix an error in line 22

--- a/css/main.css
+++ b/css/main.css
@@ -19,7 +19,7 @@ header nav:last-of-type a:not(.planets) {
 
 h1 {
   color: #fff;
-  font-family: "Bevan", cursive;
+  font-family: Bevan, serif;
   text-align: center;
   margin: 0;
 }
